--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">My Application</string>
     <string name="name">Keila</string>
-    <string name="wellcome">hello</string>
+    <string name="wellcome">Hola</string>
 </resources>
